src/tests/functionality/assignment_2_types_variables/valid/02_mandatory_const_initialization.c
int main() {
    const int x = 5;
    const char c = 'A';
    const float f = 2.5;

    return x;
}
