src/tests/functionality/assignment_2_types_variables/invalid_semantic/04_mandatory_assign_to_literal.c
int main() {
    5 = 10;
    return 0;
}
